fix: 修复Vercel配置文件冲突问题
- 移除主应用vercel.json中的functions属性，解决与builds的冲突
- 简化所有应用的vercel.json配置，使用现代化的配置格式
- 移除过时的builds和version配置
- 统一使用buildCommand、outputDirectory、installCommand配置
- 确保所有应用的CORS配置正确

--- a/main-app/vercel.json
+++ b/main-app/vercel.json
@@ -1,15 +1,7 @@
 {
-  "name": "qiankun-main-app",
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
   "routes": [
     {
       "src": "/user/(.*)",
@@ -35,17 +27,8 @@
     }
   ],
   "env": {
-    "NODE_ENV": "production"
-  },
-  "build": {
-    "env": {
-      "VITE_USER_MANAGEMENT_URL": "https://qiankun-user-management.vercel.app",
-      "VITE_SYSTEM_MANAGEMENT_URL": "https://qiankun-system-management.vercel.app"
-    }
-  },
-  "functions": {
-    "app/api/**/*.js": {
-      "runtime": "nodejs18.x"
-    }
+    "NODE_ENV": "production",
+    "VITE_USER_MANAGEMENT_URL": "https://qiankun-user-management.vercel.app",
+    "VITE_SYSTEM_MANAGEMENT_URL": "https://qiankun-system-management.vercel.app"
   }
 }
