--- a/sub-apps/system-management/vercel.json
+++ b/sub-apps/system-management/vercel.json
@@ -1,15 +1,7 @@
 {
-  "name": "qiankun-system-management",
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
   "routes": [
     {
       "src": "/(.*)",
@@ -22,11 +14,7 @@
     }
   ],
   "env": {
-    "NODE_ENV": "production"
-  },
-  "build": {
-    "env": {
-      "VITE_APP_BASE_URL": "/system"
-    }
+    "NODE_ENV": "production",
+    "VITE_APP_BASE_URL": "/system"
   }
 }
