fix: 修复主应用静态资源加载问题
- 修复vercel.json路由配置，添加filesystem处理
- 简化Vite构建配置，移除复杂的文件命名策略
- 确保JavaScript文件能正确返回application/javascript MIME类型
- 修复MIME类型错误导致的模块加载失败问题

--- a/main-app/vercel.json
+++ b/main-app/vercel.json
@@ -4,6 +4,9 @@
   "installCommand": "npm install",
   "routes": [
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/user/(.*)",
       "dest": "https://qiankun-user-management.vercel.app/$1",
       "headers": {
