fix: 统一子应用Vercel和Vite配置
- 为子应用vercel.json添加filesystem处理，确保静态资源正确加载
- 简化子应用Vite构建配置，移除复杂的lib模式
- 统一构建配置策略，避免微前端中的依赖外部化问题
- 确保所有应用使用一致的静态资源处理方案

--- a/sub-apps/system-management/vercel.json
+++ b/sub-apps/system-management/vercel.json
@@ -4,6 +4,9 @@
   "installCommand": "npm install",
   "routes": [
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html",
       "headers": {
