--- a/sub-apps/user-management/vercel.json
+++ b/sub-apps/user-management/vercel.json
@@ -4,6 +4,9 @@
   "installCommand": "npm install",
   "routes": [
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html",
       "headers": {
