--- a/sub-apps/user-management/vercel.json
+++ b/sub-apps/user-management/vercel.json
@@ -7,6 +7,14 @@
       "handle": "filesystem"
     },
     {
+      "src": "/assets/(.*)",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization"
+      }
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html",
       "headers": {
