--- a/main-app/package.json
+++ b/main-app/package.json
@@ -14,17 +14,17 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "@types/node": "^24.3.0",
+    "@vitejs/plugin-vue": "^5.0.5",
     "element-plus": "^2.11.1",
     "qiankun": "^2.10.16",
-    "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/tsconfig": "^0.5.1",
     "terser": "^5.43.1",
     "typescript": "~5.4.5",
     "vite": "^5.4.10",
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1",
     "vue-tsc": "^2.0.29"
+  },
+  "devDependencies": {
+    "@vue/tsconfig": "^0.5.1"
   }
 }
