--- a/sub-apps/system-management/package.json
+++ b/sub-apps/system-management/package.json
@@ -13,17 +13,17 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "@types/node": "^24.3.0",
-    "element-plus": "^2.11.1",
-    "vite-plugin-qiankun": "^1.0.15",
-    "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
-  },
-  "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/tsconfig": "^0.5.1",
+    "element-plus": "^2.11.1",
     "terser": "^5.43.1",
     "typescript": "~5.4.5",
     "vite": "^5.4.10",
+    "vite-plugin-qiankun": "^1.0.15",
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1",
     "vue-tsc": "^2.0.29"
+  },
+  "devDependencies": {
+    "@vue/tsconfig": "^0.5.1"
   }
 }
