--- a/.github/workflows/deploy-vercel-auto.yml
+++ b/.github/workflows/deploy-vercel-auto.yml
@@ -73,15 +73,17 @@ jobs:
       - name: Deploy to Vercel
         id: deploy
         working-directory: sub-apps/user-management
+        env:
+          VERCEL_PROJECT_ID: ${{ env.VERCEL_PROJECT_ID_USER }}
         run: |
           # 设置环境变量
-          vercel env add NODE_ENV production production --token=${{ env.VERCEL_TOKEN }} --yes || true
-          vercel env add VITE_APP_BASE_URL /user production --token=${{ env.VERCEL_TOKEN }} --yes || true
+          vercel env add NODE_ENV production production --token=${{ env.VERCEL_TOKEN }} || true
+          vercel env add VITE_APP_BASE_URL /user production --token=${{ env.VERCEL_TOKEN }} || true
           
           if [ "${{ github.event_name }}" == "push" ] && [ "${{ github.ref }}" == "refs/heads/main" ]; then
             # 生产部署
             echo "🚀 Deploying to production..."
-            vercel pull --yes --environment=production --token=${{ env.VERCEL_TOKEN }}
+            vercel pull --environment=production --token=${{ env.VERCEL_TOKEN }}
             vercel build --prod --token=${{ env.VERCEL_TOKEN }}
             URL=$(vercel deploy --prebuilt --prod --token=${{ env.VERCEL_TOKEN }})
             echo "production-url=$URL" >> $GITHUB_OUTPUT
@@ -90,7 +92,7 @@ jobs:
           else
             # 预览部署
             echo "🔄 Deploying preview..."
-            vercel pull --yes --environment=preview --token=${{ env.VERCEL_TOKEN }}
+            vercel pull --environment=preview --token=${{ env.VERCEL_TOKEN }}
             vercel build --token=${{ env.VERCEL_TOKEN }}
             URL=$(vercel deploy --prebuilt --token=${{ env.VERCEL_TOKEN }})
             echo "url=$URL" >> $GITHUB_OUTPUT
@@ -120,15 +122,17 @@ jobs:
       - name: Deploy to Vercel
         id: deploy
         working-directory: sub-apps/system-management
+        env:
+          VERCEL_PROJECT_ID: ${{ env.VERCEL_PROJECT_ID_SYSTEM }}
         run: |
           # 设置环境变量
-          vercel env add NODE_ENV production production --token=${{ env.VERCEL_TOKEN }} --yes || true
-          vercel env add VITE_APP_BASE_URL /system production --token=${{ env.VERCEL_TOKEN }} --yes || true
+          vercel env add NODE_ENV production production --token=${{ env.VERCEL_TOKEN }} || true
+          vercel env add VITE_APP_BASE_URL /system production --token=${{ env.VERCEL_TOKEN }} || true
           
           if [ "${{ github.event_name }}" == "push" ] && [ "${{ github.ref }}" == "refs/heads/main" ]; then
             # 生产部署
             echo "🚀 Deploying to production..."
-            vercel pull --yes --environment=production --token=${{ env.VERCEL_TOKEN }}
+            vercel pull --environment=production --token=${{ env.VERCEL_TOKEN }}
             vercel build --prod --token=${{ env.VERCEL_TOKEN }}
             URL=$(vercel deploy --prebuilt --prod --token=${{ env.VERCEL_TOKEN }})
             echo "production-url=$URL" >> $GITHUB_OUTPUT
@@ -137,7 +141,7 @@ jobs:
           else
             # 预览部署
             echo "🔄 Deploying preview..."
-            vercel pull --yes --environment=preview --token=${{ env.VERCEL_TOKEN }}
+            vercel pull --environment=preview --token=${{ env.VERCEL_TOKEN }}
             vercel build --token=${{ env.VERCEL_TOKEN }}
             URL=$(vercel deploy --prebuilt --token=${{ env.VERCEL_TOKEN }})
             echo "url=$URL" >> $GITHUB_OUTPUT
@@ -168,20 +172,22 @@ jobs:
       - name: Deploy to Vercel
         id: deploy
         working-directory: main-app
+        env:
+          VERCEL_PROJECT_ID: ${{ env.VERCEL_PROJECT_ID_MAIN }}
         run: |
           # 动态设置子应用URL环境变量
           USER_URL="${{ needs.deploy-user-management.outputs.production-url || 'https://qiankun-user-management.vercel.app' }}"
           SYSTEM_URL="${{ needs.deploy-system-management.outputs.production-url || 'https://qiankun-system-management.vercel.app' }}"
           
-          vercel env add VITE_USER_MANAGEMENT_URL "$USER_URL" production --token=${{ env.VERCEL_TOKEN }} --yes || true
-          vercel env add VITE_SYSTEM_MANAGEMENT_URL "$SYSTEM_URL" production --token=${{ env.VERCEL_TOKEN }} --yes || true
+          vercel env add VITE_USER_MANAGEMENT_URL "$USER_URL" production --token=${{ env.VERCEL_TOKEN }} || true
+          vercel env add VITE_SYSTEM_MANAGEMENT_URL "$SYSTEM_URL" production --token=${{ env.VERCEL_TOKEN }} || true
           
           if [ "${{ github.event_name }}" == "push" ] && [ "${{ github.ref }}" == "refs/heads/main" ]; then
             # 生产部署
             echo "🚀 Deploying main app to production..."
             echo "📍 User Management URL: $USER_URL"
             echo "📍 System Management URL: $SYSTEM_URL"
-            vercel pull --yes --environment=production --token=${{ env.VERCEL_TOKEN }}
+            vercel pull --environment=production --token=${{ env.VERCEL_TOKEN }}
             vercel build --prod --token=${{ env.VERCEL_TOKEN }}
             URL=$(vercel deploy --prebuilt --prod --token=${{ env.VERCEL_TOKEN }})
             echo "production-url=$URL" >> $GITHUB_OUTPUT
@@ -194,7 +200,7 @@ jobs:
             SYSTEM_PREVIEW_URL="${{ needs.deploy-system-management.outputs.preview-url || 'https://qiankun-system-management.vercel.app' }}"
             echo "📍 User Management Preview URL: $USER_PREVIEW_URL"
             echo "📍 System Management Preview URL: $SYSTEM_PREVIEW_URL"
-            vercel pull --yes --environment=preview --token=${{ env.VERCEL_TOKEN }}
+            vercel pull --environment=preview --token=${{ env.VERCEL_TOKEN }}
             vercel build --token=${{ env.VERCEL_TOKEN }}
             URL=$(vercel deploy --prebuilt --token=${{ env.VERCEL_TOKEN }})
             echo "url=$URL" >> $GITHUB_OUTPUT
