--- a/.github/workflows/deploy-vercel-auto.yml
+++ b/.github/workflows/deploy-vercel-auto.yml
@@ -84,20 +84,16 @@ jobs:
           vercel env add VITE_APP_BASE_URL /user production --token="${{ env.VERCEL_TOKEN }}" || true
           
           if [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" == "refs/heads/main" ]]; then
-            # 生产部署
+            # 生产部署 - 使用一步部署
             echo "🚀 Deploying to production..."
-            vercel pull --environment=production --token="${{ env.VERCEL_TOKEN }}"
-            vercel build --prod --token="${{ env.VERCEL_TOKEN }}"
-            URL=$(vercel deploy --prebuilt --prod --token="${{ env.VERCEL_TOKEN }}")
+            URL=$(vercel --prod --token="${{ env.VERCEL_TOKEN }}")
             echo "production-url=${URL}" >> "$GITHUB_OUTPUT"
             echo "url=${URL}" >> "$GITHUB_OUTPUT"
             echo "✅ Production deployment: ${URL}"
           else
-            # 预览部署
+            # 预览部署 - 使用一步部署
             echo "🔄 Deploying preview..."
-            vercel pull --environment=preview --token="${{ env.VERCEL_TOKEN }}"
-            vercel build --token="${{ env.VERCEL_TOKEN }}"
-            URL=$(vercel deploy --prebuilt --token="${{ env.VERCEL_TOKEN }}")
+            URL=$(vercel --token="${{ env.VERCEL_TOKEN }}")
             echo "url=${URL}" >> "$GITHUB_OUTPUT"
             echo "✅ Preview deployment: ${URL}"
           fi
@@ -136,20 +132,16 @@ jobs:
           vercel env add VITE_APP_BASE_URL /system production --token="${{ env.VERCEL_TOKEN }}" || true
           
           if [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" == "refs/heads/main" ]]; then
-            # 生产部署
+            # 生产部署 - 使用一步部署
             echo "🚀 Deploying to production..."
-            vercel pull --environment=production --token="${{ env.VERCEL_TOKEN }}"
-            vercel build --prod --token="${{ env.VERCEL_TOKEN }}"
-            URL=$(vercel deploy --prebuilt --prod --token="${{ env.VERCEL_TOKEN }}")
+            URL=$(vercel --prod --token="${{ env.VERCEL_TOKEN }}")
             echo "production-url=${URL}" >> "$GITHUB_OUTPUT"
             echo "url=${URL}" >> "$GITHUB_OUTPUT"
             echo "✅ Production deployment: ${URL}"
           else
-            # 预览部署
+            # 预览部署 - 使用一步部署
             echo "🔄 Deploying preview..."
-            vercel pull --environment=preview --token="${{ env.VERCEL_TOKEN }}"
-            vercel build --token="${{ env.VERCEL_TOKEN }}"
-            URL=$(vercel deploy --prebuilt --token="${{ env.VERCEL_TOKEN }}")
+            URL=$(vercel --token="${{ env.VERCEL_TOKEN }}")
             echo "url=${URL}" >> "$GITHUB_OUTPUT"
             echo "✅ Preview deployment: ${URL}"
           fi
@@ -192,26 +184,22 @@ jobs:
           vercel env add VITE_SYSTEM_MANAGEMENT_URL "$SYSTEM_URL" production --token="${{ env.VERCEL_TOKEN }}" || true
           
           if [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" == "refs/heads/main" ]]; then
-            # 生产部署
+            # 生产部署 - 使用一步部署
             echo "🚀 Deploying main app to production..."
             echo "📍 User Management URL: $USER_URL"
             echo "📍 System Management URL: $SYSTEM_URL"
-            vercel pull --environment=production --token="${{ env.VERCEL_TOKEN }}"
-            vercel build --prod --token="${{ env.VERCEL_TOKEN }}"
-            URL=$(vercel deploy --prebuilt --prod --token="${{ env.VERCEL_TOKEN }}")
+            URL=$(vercel --prod --token="${{ env.VERCEL_TOKEN }}")
             echo "production-url=${URL}" >> "$GITHUB_OUTPUT"
             echo "url=${URL}" >> "$GITHUB_OUTPUT"
             echo "✅ Main app production deployment: ${URL}"
           else
-            # 预览部署
+            # 预览部署 - 使用一步部署
             echo "🔄 Deploying main app preview..."
             USER_PREVIEW_URL="${{ needs.deploy-user-management.outputs.preview-url || 'https://qiankun-user-management.vercel.app' }}"
             SYSTEM_PREVIEW_URL="${{ needs.deploy-system-management.outputs.preview-url || 'https://qiankun-system-management.vercel.app' }}"
             echo "📍 User Management Preview URL: $USER_PREVIEW_URL"
             echo "📍 System Management Preview URL: $SYSTEM_PREVIEW_URL"
-            vercel pull --environment=preview --token="${{ env.VERCEL_TOKEN }}"
-            vercel build --token="${{ env.VERCEL_TOKEN }}"
-            URL=$(vercel deploy --prebuilt --token="${{ env.VERCEL_TOKEN }}")
+            URL=$(vercel --token="${{ env.VERCEL_TOKEN }}")
             echo "url=${URL}" >> "$GITHUB_OUTPUT"
             echo "✅ Main app preview deployment: ${URL}"
           fi
