--- a/.github/workflows/deploy-vercel-auto.yml
+++ b/.github/workflows/deploy-vercel-auto.yml
@@ -75,29 +75,29 @@ jobs:
         working-directory: sub-apps/user-management
         env:
           VERCEL_PROJECT_ID: ${{ env.VERCEL_PROJECT_ID_USER }}
+          VERCEL_ORG_ID: ${{ env.VERCEL_ORG_ID }}
         shell: bash
         run: |
           set -e
           
-          # 初始化vercel项目配置
-          echo "Initializing Vercel project..."
-          vercel link --token="${{ env.VERCEL_TOKEN }}" --scope="${{ env.VERCEL_ORG_ID }}" --project="${{ env.VERCEL_PROJECT_ID_USER }}" || true
+          # 直接使用vercel部署，不使用link
+          echo "🚀 Starting deployment without link..."
           
           # 设置环境变量
           vercel env add NODE_ENV production production --token="${{ env.VERCEL_TOKEN }}" || true
           vercel env add VITE_APP_BASE_URL /user production --token="${{ env.VERCEL_TOKEN }}" || true
           
           if [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" == "refs/heads/main" ]]; then
-            # 生产部署 - 使用一步部署
+            # 生产部署
             echo "🚀 Deploying to production..."
-            URL=$(vercel --prod --token="${{ env.VERCEL_TOKEN }}")
+            URL=$(vercel --prod --token="${{ env.VERCEL_TOKEN }}" --force)
             echo "production-url=${URL}" >> "$GITHUB_OUTPUT"
             echo "url=${URL}" >> "$GITHUB_OUTPUT"
             echo "✅ Production deployment: ${URL}"
           else
-            # 预览部署 - 使用一步部署
+            # 预览部署
             echo "🔄 Deploying preview..."
-            URL=$(vercel --token="${{ env.VERCEL_TOKEN }}")
+            URL=$(vercel --token="${{ env.VERCEL_TOKEN }}" --force)
             echo "url=${URL}" >> "$GITHUB_OUTPUT"
             echo "✅ Preview deployment: ${URL}"
           fi
@@ -127,29 +127,29 @@ jobs:
         working-directory: sub-apps/system-management
         env:
           VERCEL_PROJECT_ID: ${{ env.VERCEL_PROJECT_ID_SYSTEM }}
+          VERCEL_ORG_ID: ${{ env.VERCEL_ORG_ID }}
         shell: bash
         run: |
           set -e
           
-          # 初始化vercel项目配置
-          echo "Initializing Vercel project..."
-          vercel link --token="${{ env.VERCEL_TOKEN }}" --scope="${{ env.VERCEL_ORG_ID }}" --project="${{ env.VERCEL_PROJECT_ID_SYSTEM }}" || true
+          # 直接使用vercel部署，不使用link
+          echo "🚀 Starting deployment without link..."
           
           # 设置环境变量
           vercel env add NODE_ENV production production --token="${{ env.VERCEL_TOKEN }}" || true
           vercel env add VITE_APP_BASE_URL /system production --token="${{ env.VERCEL_TOKEN }}" || true
           
           if [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" == "refs/heads/main" ]]; then
-            # 生产部署 - 使用一步部署
+            # 生产部署
             echo "🚀 Deploying to production..."
-            URL=$(vercel --prod --token="${{ env.VERCEL_TOKEN }}")
+            URL=$(vercel --prod --token="${{ env.VERCEL_TOKEN }}" --force)
             echo "production-url=${URL}" >> "$GITHUB_OUTPUT"
             echo "url=${URL}" >> "$GITHUB_OUTPUT"
             echo "✅ Production deployment: ${URL}"
           else
-            # 预览部署 - 使用一步部署
+            # 预览部署
             echo "🔄 Deploying preview..."
-            URL=$(vercel --token="${{ env.VERCEL_TOKEN }}")
+            URL=$(vercel --token="${{ env.VERCEL_TOKEN }}" --force)
             echo "url=${URL}" >> "$GITHUB_OUTPUT"
             echo "✅ Preview deployment: ${URL}"
           fi
@@ -180,13 +180,13 @@ jobs:
         working-directory: main-app
         env:
           VERCEL_PROJECT_ID: ${{ env.VERCEL_PROJECT_ID_MAIN }}
+          VERCEL_ORG_ID: ${{ env.VERCEL_ORG_ID }}
         shell: bash
         run: |
           set -e
           
-          # 初始化vercel项目配置
-          echo "Initializing Vercel project..."
-          vercel link --token="${{ env.VERCEL_TOKEN }}" --scope="${{ env.VERCEL_ORG_ID }}" --project="${{ env.VERCEL_PROJECT_ID_MAIN }}" || true
+          # 直接使用vercel部署，不使用link
+          echo "🚀 Starting main app deployment without link..."
           
           # 动态设置子应用URL环境变量
           USER_URL="${{ needs.deploy-user-management.outputs.production-url || 'https://qiankun-user-management.vercel.app' }}"
@@ -196,22 +196,22 @@ jobs:
           vercel env add VITE_SYSTEM_MANAGEMENT_URL "$SYSTEM_URL" production --token="${{ env.VERCEL_TOKEN }}" || true
           
           if [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" == "refs/heads/main" ]]; then
-            # 生产部署 - 使用一步部署
+            # 生产部署
             echo "🚀 Deploying main app to production..."
             echo "📍 User Management URL: $USER_URL"
             echo "📍 System Management URL: $SYSTEM_URL"
-            URL=$(vercel --prod --token="${{ env.VERCEL_TOKEN }}")
+            URL=$(vercel --prod --token="${{ env.VERCEL_TOKEN }}" --force)
             echo "production-url=${URL}" >> "$GITHUB_OUTPUT"
             echo "url=${URL}" >> "$GITHUB_OUTPUT"
             echo "✅ Main app production deployment: ${URL}"
           else
-            # 预览部署 - 使用一步部署
+            # 预览部署
             echo "🔄 Deploying main app preview..."
             USER_PREVIEW_URL="${{ needs.deploy-user-management.outputs.preview-url || 'https://qiankun-user-management.vercel.app' }}"
             SYSTEM_PREVIEW_URL="${{ needs.deploy-system-management.outputs.preview-url || 'https://qiankun-system-management.vercel.app' }}"
             echo "📍 User Management Preview URL: $USER_PREVIEW_URL"
             echo "📍 System Management Preview URL: $SYSTEM_PREVIEW_URL"
-            URL=$(vercel --token="${{ env.VERCEL_TOKEN }}")
+            URL=$(vercel --token="${{ env.VERCEL_TOKEN }}" --force)
             echo "url=${URL}" >> "$GITHUB_OUTPUT"
             echo "✅ Main app preview deployment: ${URL}"
           fi
