--- a/.github/workflows/deploy-vercel-auto.yml
+++ b/.github/workflows/deploy-vercel-auto.yml
@@ -217,22 +217,22 @@ jobs:
           vercel env add VITE_SYSTEM_MANAGEMENT_URL "$SYSTEM_URL" production --token="${{ env.VERCEL_TOKEN }}" || true
           
           if [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" == "refs/heads/main" ]]; then
-            # 生产部署 - 显式指定当前目录
+            # 生产部署 - 强制指定项目配置覆盖Vercel设置
             echo "🚀 Deploying main app to production..."
             echo "📍 User Management URL: $USER_URL"
             echo "📍 System Management URL: $SYSTEM_URL"
-            URL=$(vercel . --prod --token="${{ env.VERCEL_TOKEN }}" --force)
+            URL=$(vercel . --prod --token="${{ env.VERCEL_TOKEN }}" --force --scope="${{ env.VERCEL_ORG_ID }}" --project="${{ env.VERCEL_PROJECT_ID }}")
             echo "production-url=${URL}" >> "$GITHUB_OUTPUT"
             echo "url=${URL}" >> "$GITHUB_OUTPUT"
             echo "✅ Main app production deployment: ${URL}"
           else
-            # 预览部署 - 显式指定当前目录
+            # 预览部署 - 强制指定项目配置覆盖Vercel设置
             echo "🔄 Deploying main app preview..."
             USER_PREVIEW_URL="${{ needs.deploy-user-management.outputs.preview-url || 'https://qiankun-user-management.vercel.app' }}"
             SYSTEM_PREVIEW_URL="${{ needs.deploy-system-management.outputs.preview-url || 'https://qiankun-system-management.vercel.app' }}"
             echo "📍 User Management Preview URL: $USER_PREVIEW_URL"
             echo "📍 System Management Preview URL: $SYSTEM_PREVIEW_URL"
-            URL=$(vercel . --token="${{ env.VERCEL_TOKEN }}" --force)
+            URL=$(vercel . --token="${{ env.VERCEL_TOKEN }}" --force --scope="${{ env.VERCEL_ORG_ID }}" --project="${{ env.VERCEL_PROJECT_ID }}")
             echo "url=${URL}" >> "$GITHUB_OUTPUT"
             echo "✅ Main app preview deployment: ${URL}"
           fi
