fix(docs): 修复VitePress GitHub Pages部署配置
- 移除npm缓存配置避免缓存路径问题
- 更新Node.js版本到20
- 添加npm cache clean确保依赖安装稳定
- 优化构建流程确保部署成功

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -29,16 +29,16 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: npm
-          cache-dependency-path: docs-site/package-lock.json
+          node-version: 20
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
       - name: Install dependencies
         working-directory: docs-site
-        run: npm ci
+        run: |
+          npm cache clean --force
+          npm install
 
       - name: Build with VitePress
         working-directory: docs-site
