--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -8,21 +8,11 @@ on:
       - '.github/workflows/deploy-docs.yml'
   workflow_dispatch:
 
-# 设置必要的权限
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# 确保只有一个部署任务运行
-concurrency:
-  group: pages
-  cancel-in-progress: false
-
 jobs:
-  # 构建任务
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -34,9 +24,6 @@ jobs:
         with:
           node-version: 20
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
       - name: Install dependencies
         working-directory: docs-site
         run: |
@@ -47,24 +34,15 @@ jobs:
         working-directory: docs-site
         run: |
           npm run docs:build
-          # 添加.nojekyll文件确保GitHub Pages正确处理
-          touch .vitepress/dist/.nojekyll
           echo "构建完成！"
           ls -la .vitepress/dist/
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: docs-site/.vitepress/dist
-
-  # 部署任务
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs-site/.vitepress/dist
+          force_orphan: true
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          commit_message: 'deploy: update documentation site'
