--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: 'docs-site/package-lock.json'
+          cache-dependency-path: '**/package-lock.json'
 
       - name: Install dependencies
         run: |
