--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ temp/
 .vercel/
 
 # Package manager lock files (keep only pnpm-lock.yaml)
-package-lock.json
+# package-lock.json
 yarn.lock
 node_modules
 
