--- a/docs-site/package.json
+++ b/docs-site/package.json
@@ -16,7 +16,9 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
-    "terser": "^5.24.0"
+    "mermaid": "^10.9.4",
+    "terser": "^5.24.0",
+    "vitepress-plugin-mermaid": "^2.0.17"
   },
   "engines": {
     "node": ">=18.0.0"
